kanc/src/tests/sample_code/should_fail/single_file/bind/ref_underscore_param.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let foo = fun foo_(_: Nat): Nat {
    _
};
